{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 428,
  "lineage": "52607968-550a-28f9-013e-925260f57c83",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb62f587e4d3cb8d",
            "arn": "arn:aws:ec2:us-east-1:111314928072:elastic-ip/eipalloc-0fb62f587e4d3cb8d",
            "association_id": "eipassoc-050e805fec00662ce",
            "domain": "vpc",
            "id": "eipalloc-0fb62f587e4d3cb8d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0332203be534dab23",
            "private_dns": "ip-10-0-1-126.ec2.internal",
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-3-89-95-54.compute-1.amazonaws.com",
            "public_ip": "3.89.95.54",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "eip-tf-1a"
            },
            "tags_all": {
              "Name": "eip-tf-1a"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "eipalloc-0fb62f587e4d3cb8d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_param",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        },
        {
          "index_key": "1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3e19cecb8da748f",
            "arn": "arn:aws:ec2:us-east-1:111314928072:elastic-ip/eipalloc-0f3e19cecb8da748f",
            "association_id": "eipassoc-0cfead9a3a322e657",
            "domain": "vpc",
            "id": "eipalloc-0f3e19cecb8da748f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01b2769c52256760d",
            "private_dns": "ip-10-0-2-128.ec2.internal",
            "private_ip": "10.0.2.128",
            "public_dns": "ec2-3-230-36-121.compute-1.amazonaws.com",
            "public_ip": "3.230.36.121",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "eip-tf-1b"
            },
            "tags_all": {
              "Name": "eip-tf-1b"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "eipalloc-0f3e19cecb8da748f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_param",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-ansible-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02ebdb11bae1b2486",
            "arn": "arn:aws:ec2:us-east-1:111314928072:instance/i-048f091141e818b95",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-profile-tf",
            "id": "i-048f091141e818b95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-062fb5af1b996e12d"
              }
            ],
            "primary_network_interface_id": "eni-062fb5af1b996e12d",
            "private_dns": "ip-10-0-2-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-3-93-212-251.compute-1.amazonaws.com",
            "public_ip": "3.93.212.251",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-057a2a71220d2750c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a51f4f8d5e70d6e8",
            "tags": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ec2-tf-ansible-1a"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ec2-tf-ansible-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b5f9636f79923c0"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "i-048f091141e818b95",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ansible-profile-param",
            "aws_iam_role.ansible-role-param",
            "aws_key_pair.deployer",
            "aws_security_group.ansible-sg-param",
            "aws_ssm_parameter.ansible_private_key",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_ssm_parameter.ubuntu",
            "tls_private_key.deployer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-backend-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1a",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02ebdb11bae1b2486",
            "arn": "arn:aws:ec2:us-east-1:111314928072:instance/i-00ac1ddb98d0866cf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ecr-profile-tf",
            "id": "i-00ac1ddb98d0866cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d68a0e2f1badf623"
              }
            ],
            "primary_network_interface_id": "eni-0d68a0e2f1badf623",
            "private_dns": "ip-10-0-3-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.252",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b4b6c1e03a64bb4c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03659d4f814c1c4e4",
            "tags": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ec2-tf-backend-1a"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ec2-tf-backend-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3e806ad2b5fa58f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "i-00ac1ddb98d0866cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_efs_file_system.efs-param",
            "aws_efs_mount_target.efs-mount-target-param",
            "aws_iam_instance_profile.ec2-profile-param",
            "aws_iam_role.ec2-ecr-role-param",
            "aws_key_pair.deployer",
            "aws_security_group.backend-sg-param",
            "aws_security_group.efs-sg-param",
            "aws_subnet.private-snet-param-1a",
            "aws_subnet.private-snet-param-1b",
            "aws_vpc.vpc_param",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_ssm_parameter.ubuntu",
            "tls_private_key.deployer"
          ]
        },
        {
          "index_key": "1b",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02ebdb11bae1b2486",
            "arn": "arn:aws:ec2:us-east-1:111314928072:instance/i-08baba3e8f4e11ddb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ecr-profile-tf",
            "id": "i-08baba3e8f4e11ddb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-070dfc719d44b1226"
              }
            ],
            "primary_network_interface_id": "eni-070dfc719d44b1226",
            "private_dns": "ip-10-0-4-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.107",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a8ef6e511ed4980a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009ca98f3f57f540a",
            "tags": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ec2-tf-backend-1b"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ec2-tf-backend-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3e806ad2b5fa58f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "i-08baba3e8f4e11ddb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_efs_file_system.efs-param",
            "aws_efs_mount_target.efs-mount-target-param",
            "aws_iam_instance_profile.ec2-profile-param",
            "aws_iam_role.ec2-ecr-role-param",
            "aws_key_pair.deployer",
            "aws_security_group.backend-sg-param",
            "aws_security_group.efs-sg-param",
            "aws_subnet.private-snet-param-1a",
            "aws_subnet.private-snet-param-1b",
            "aws_vpc.vpc_param",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_ssm_parameter.ubuntu",
            "tls_private_key.deployer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-frontend-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02ebdb11bae1b2486",
            "arn": "arn:aws:ec2:us-east-1:111314928072:instance/i-0e3e59841e5470e13",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ecr-profile-tf",
            "id": "i-0e3e59841e5470e13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-043c37bda13d06b9f"
              }
            ],
            "primary_network_interface_id": "eni-043c37bda13d06b9f",
            "private_dns": "ip-10-0-1-186.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.186",
            "public_dns": "ec2-32-192-1-137.compute-1.amazonaws.com",
            "public_ip": "32.192.1.137",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-037ae68cb7aa46371",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c773cded49ff4551",
            "tags": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ec2-tf-frontend-1a"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ec2-tf-frontend-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018582f2b2ee41033"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "i-0e3e59841e5470e13",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-profile-param",
            "aws_iam_role.ec2-ecr-role-param",
            "aws_key_pair.deployer",
            "aws_security_group.frontend-sg-param",
            "aws_subnet.public-snet-param-1a",
            "aws_vpc.vpc_param",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_ssm_parameter.ubuntu",
            "tls_private_key.deployer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:internet-gateway/igw-02466bca4d7805d71",
            "id": "igw-02466bca4d7805d71",
            "owner_id": "111314928072",
            "region": "us-east-1",
            "tags": {
              "Name": "igw-tf"
            },
            "tags_all": {
              "Name": "igw-tf"
            },
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "igw-02466bca4d7805d71",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:loadbalancer/app/alb-backend-tf/84cabbfe46466b36",
            "arn_suffix": "app/alb-backend-tf/84cabbfe46466b36",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-backend-tf-1927946289.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:111314928072:loadbalancer/app/alb-backend-tf/84cabbfe46466b36",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-backend-tf",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0f0253fdc0855afc9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a51f4f8d5e70d6e8"
              },
              {
                "subnet_id": "subnet-0c773cded49ff4551"
              }
            ],
            "subnets": [
              "subnet-0a51f4f8d5e70d6e8",
              "subnet-0c773cded49ff4551"
            ],
            "tags": {
              "Name": "alb-backend-tf"
            },
            "tags_all": {
              "Name": "alb-backend-tf"
            },
            "vpc_id": "vpc-09a9633f6359a2abb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:loadbalancer/app/alb-backend-tf/84cabbfe46466b36"
          },
          "dependencies": [
            "aws_security_group.alb-sg-param",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:listener/app/alb-backend-tf/84cabbfe46466b36/8f57ae2407b1a2ce",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:targetgroup/tg-backend-tf/f100615e0eaaaae8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:111314928072:listener/app/alb-backend-tf/84cabbfe46466b36/8f57ae2407b1a2ce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:loadbalancer/app/alb-backend-tf/84cabbfe46466b36",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:listener/app/alb-backend-tf/84cabbfe46466b36/8f57ae2407b1a2ce"
          },
          "dependencies": [
            "aws_lb.alb-param",
            "aws_lb_target_group.tg-param",
            "aws_security_group.alb-sg-param",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:targetgroup/tg-backend-tf/f100615e0eaaaae8",
            "arn_suffix": "targetgroup/tg-backend-tf/f100615e0eaaaae8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:111314928072:targetgroup/tg-backend-tf/f100615e0eaaaae8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:111314928072:loadbalancer/app/alb-backend-tf/84cabbfe46466b36"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-backend-tf",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:targetgroup/tg-backend-tf/f100615e0eaaaae8"
          },
          "dependencies": [
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:111314928072:targetgroup/tg-backend-tf/f100615e0eaaaae8,i-00ac1ddb98d0866cf,8080",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:targetgroup/tg-backend-tf/f100615e0eaaaae8",
            "target_id": "i-00ac1ddb98d0866cf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:targetgroup/tg-backend-tf/f100615e0eaaaae8",
            "target_id": "i-00ac1ddb98d0866cf"
          },
          "dependencies": [
            "aws_efs_file_system.efs-param",
            "aws_efs_mount_target.efs-mount-target-param",
            "aws_iam_instance_profile.ec2-profile-param",
            "aws_iam_role.ec2-ecr-role-param",
            "aws_instance.ec2-backend-param",
            "aws_key_pair.deployer",
            "aws_lb_target_group.tg-param",
            "aws_security_group.backend-sg-param",
            "aws_security_group.efs-sg-param",
            "aws_subnet.private-snet-param-1a",
            "aws_subnet.private-snet-param-1b",
            "aws_vpc.vpc_param",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_ssm_parameter.ubuntu",
            "tls_private_key.deployer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:111314928072:targetgroup/tg-backend-tf/f100615e0eaaaae8,i-08baba3e8f4e11ddb,8080",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:targetgroup/tg-backend-tf/f100615e0eaaaae8",
            "target_id": "i-08baba3e8f4e11ddb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:111314928072:targetgroup/tg-backend-tf/f100615e0eaaaae8",
            "target_id": "i-08baba3e8f4e11ddb"
          },
          "dependencies": [
            "aws_efs_file_system.efs-param",
            "aws_efs_mount_target.efs-mount-target-param",
            "aws_iam_instance_profile.ec2-profile-param",
            "aws_iam_role.ec2-ecr-role-param",
            "aws_instance.ec2-backend-param",
            "aws_key_pair.deployer",
            "aws_lb_target_group.tg-param",
            "aws_security_group.backend-sg-param",
            "aws_security_group.efs-sg-param",
            "aws_subnet.private-snet-param-1a",
            "aws_subnet.private-snet-param-1b",
            "aws_vpc.vpc_param",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_ssm_parameter.ubuntu",
            "tls_private_key.deployer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb62f587e4d3cb8d",
            "association_id": "eipassoc-050e805fec00662ce",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b05c5c61e2a9de14",
            "network_interface_id": "eni-0332203be534dab23",
            "private_ip": "10.0.1.126",
            "public_ip": "3.89.95.54",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c773cded49ff4551",
            "tags": {
              "Name": "ngw-tf-1a"
            },
            "tags_all": {
              "Name": "ngw-tf-1a"
            },
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "nat-0b05c5c61e2a9de14",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip_param",
            "aws_internet_gateway.igw_param",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        },
        {
          "index_key": "1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3e19cecb8da748f",
            "association_id": "eipassoc-0cfead9a3a322e657",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a273f9d263e15d5f",
            "network_interface_id": "eni-01b2769c52256760d",
            "private_ip": "10.0.2.128",
            "public_ip": "3.230.36.121",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a51f4f8d5e70d6e8",
            "tags": {
              "Name": "ngw-tf-1b"
            },
            "tags_all": {
              "Name": "ngw-tf-1b"
            },
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "nat-0a273f9d263e15d5f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip_param",
            "aws_internet_gateway.igw_param",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:route-table/rtb-08752ee50f0c60505",
            "id": "rtb-08752ee50f0c60505",
            "owner_id": "111314928072",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b05c5c61e2a9de14",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-tf-1a"
            },
            "tags_all": {
              "Name": "private-rt-tf-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "rtb-08752ee50f0c60505",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip_param",
            "aws_internet_gateway.igw_param",
            "aws_nat_gateway.ngw-param",
            "aws_subnet.private-snet-param-1a",
            "aws_subnet.private-snet-param-1b",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        },
        {
          "index_key": "1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:route-table/rtb-0dfb2046801055e20",
            "id": "rtb-0dfb2046801055e20",
            "owner_id": "111314928072",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a273f9d263e15d5f",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-tf-1b"
            },
            "tags_all": {
              "Name": "private-rt-tf-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "rtb-0dfb2046801055e20",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip_param",
            "aws_internet_gateway.igw_param",
            "aws_nat_gateway.ngw-param",
            "aws_subnet.private-snet-param-1a",
            "aws_subnet.private-snet-param-1b",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:route-table/rtb-00e1873985d399ee5",
            "id": "rtb-00e1873985d399ee5",
            "owner_id": "111314928072",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02466bca4d7805d71",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-tf"
            },
            "tags_all": {
              "Name": "public-rt-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "rtb-00e1873985d399ee5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_param",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-associat-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a1e8ea9e9b0a8e4",
            "region": "us-east-1",
            "route_table_id": "rtb-08752ee50f0c60505",
            "subnet_id": "subnet-03659d4f814c1c4e4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "rtbassoc-03a1e8ea9e9b0a8e4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip_param",
            "aws_internet_gateway.igw_param",
            "aws_nat_gateway.ngw-param",
            "aws_route_table.private-rt-param",
            "aws_subnet.private-snet-param-1a",
            "aws_subnet.private-snet-param-1b",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        },
        {
          "index_key": "1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00496d6a07a2ff196",
            "region": "us-east-1",
            "route_table_id": "rtb-0dfb2046801055e20",
            "subnet_id": "subnet-009ca98f3f57f540a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "rtbassoc-00496d6a07a2ff196",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip_param",
            "aws_internet_gateway.igw_param",
            "aws_nat_gateway.ngw-param",
            "aws_route_table.private-rt-param",
            "aws_subnet.private-snet-param-1a",
            "aws_subnet.private-snet-param-1b",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-associat-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c34fa61ad06b37a",
            "region": "us-east-1",
            "route_table_id": "rtb-00e1873985d399ee5",
            "subnet_id": "subnet-0c773cded49ff4551"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "rtbassoc-09c34fa61ad06b37a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_param",
            "aws_route_table.public-rt-param",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        },
        {
          "index_key": "1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaf733ae00a52703",
            "region": "us-east-1",
            "route_table_id": "rtb-00e1873985d399ee5",
            "subnet_id": "subnet-0a51f4f8d5e70d6e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "rtbassoc-0eaf733ae00a52703",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_param",
            "aws_route_table.public-rt-param",
            "aws_subnet.public-snet-param-1a",
            "aws_subnet.public-snet-param-1b",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group/sg-0f0253fdc0855afc9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f0253fdc0855afc9",
            "ingress": [],
            "name": "alb-sg-tf",
            "name_prefix": "",
            "owner_id": "111314928072",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg-tf"
            },
            "tags_all": {
              "Name": "alb-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sg-0f0253fdc0855afc9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_param"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible-sg-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group/sg-03b5f9636f79923c0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b5f9636f79923c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-sg-tf",
            "name_prefix": "",
            "owner_id": "111314928072",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ansible-sg-tf"
            },
            "tags_all": {
              "Name": "ansible-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sg-03b5f9636f79923c0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_param"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-sg-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group/sg-0a3e806ad2b5fa58f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3e806ad2b5fa58f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0253fdc0855afc9"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "backend-sg-tf",
            "name_prefix": "",
            "owner_id": "111314928072",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-sg-tf"
            },
            "tags_all": {
              "Name": "backend-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sg-0a3e806ad2b5fa58f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_param"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs-sg-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group/sg-0cd8f5ee6aeeb082f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd8f5ee6aeeb082f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3e806ad2b5fa58f"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg-tf",
            "name_prefix": "",
            "owner_id": "111314928072",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-sg-tf"
            },
            "tags_all": {
              "Name": "efs-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sg-0cd8f5ee6aeeb082f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_param"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-sg-param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group/sg-018582f2b2ee41033",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018582f2b2ee41033",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "frontend-sg-tf",
            "name_prefix": "",
            "owner_id": "111314928072",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-sg-tf"
            },
            "tags_all": {
              "Name": "frontend-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sg-018582f2b2ee41033",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_param"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-snet-param-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:subnet/subnet-03659d4f814c1c4e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03659d4f814c1c4e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111314928072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-snet-tf-1a"
            },
            "tags_all": {
              "Name": "private-snet-tf-1a"
            },
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "subnet-03659d4f814c1c4e4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-snet-param-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:subnet/subnet-009ca98f3f57f540a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009ca98f3f57f540a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111314928072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-snet-tf-1b"
            },
            "tags_all": {
              "Name": "private-snet-tf-1b"
            },
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "subnet-009ca98f3f57f540a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-snet-param-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:subnet/subnet-0c773cded49ff4551",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c773cded49ff4551",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111314928072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-snet-tf-1a"
            },
            "tags_all": {
              "Name": "public-snet-tf-1a"
            },
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "subnet-0c773cded49ff4551",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-snet-param-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:subnet/subnet-0a51f4f8d5e70d6e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a51f4f8d5e70d6e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111314928072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-snet-tf-1b"
            },
            "tags_all": {
              "Name": "public-snet-tf-1b"
            },
            "vpc_id": "vpc-09a9633f6359a2abb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "subnet-0a51f4f8d5e70d6e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_param",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:vpc/vpc-09a9633f6359a2abb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08f3ec8cf753c3711",
            "default_route_table_id": "rtb-0b6b46777fb5bf308",
            "default_security_group_id": "sg-094ab138e0d213c8d",
            "dhcp_options_id": "dopt-04577571e97470144",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a9633f6359a2abb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6b46777fb5bf308",
            "owner_id": "111314928072",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc_tf"
            },
            "tags_all": {
              "Name": "vpc_tf"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "vpc-09a9633f6359a2abb",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ansible-sg-egress-param-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group-rule/sgr-00f9166276e676eca",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00f9166276e676eca",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03b5f9636f79923c0",
            "security_group_rule_id": "sgr-00f9166276e676eca",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sgr-00f9166276e676eca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ansible-sg-param",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "backend-sg-egress-param-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group-rule/sgr-08b4589e14411b09f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08b4589e14411b09f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a3e806ad2b5fa58f",
            "security_group_rule_id": "sgr-08b4589e14411b09f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sgr-08b4589e14411b09f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.backend-sg-param",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "efs-sg-egress-param-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group-rule/sgr-0af78018e63f7fc8a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0af78018e63f7fc8a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0cd8f5ee6aeeb082f",
            "security_group_rule_id": "sgr-0af78018e63f7fc8a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sgr-0af78018e63f7fc8a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.efs-sg-param",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "frontend-sg-egress-param-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group-rule/sgr-0b747b4213cc10891",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b747b4213cc10891",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-018582f2b2ee41033",
            "security_group_rule_id": "sgr-0b747b4213cc10891",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sgr-0b747b4213cc10891",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.frontend-sg-param",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ansible-sg-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group-rule/sgr-097e0251c4e8da1fc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-097e0251c4e8da1fc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03b5f9636f79923c0",
            "security_group_rule_id": "sgr-097e0251c4e8da1fc",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sgr-097e0251c4e8da1fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ansible-sg-param",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "backend-sg-ingress-param-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group-rule/sgr-08e1714c793d404a6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-08e1714c793d404a6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f0253fdc0855afc9",
            "region": "us-east-1",
            "security_group_id": "sg-0a3e806ad2b5fa58f",
            "security_group_rule_id": "sgr-08e1714c793d404a6",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sgr-08e1714c793d404a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb-sg-param",
            "aws_security_group.backend-sg-param",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "backend-sg-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group-rule/sgr-0dfa0768eae103bb4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0dfa0768eae103bb4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a3e806ad2b5fa58f",
            "security_group_rule_id": "sgr-0dfa0768eae103bb4",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sgr-0dfa0768eae103bb4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.backend-sg-param",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "efs-sg-ingress-param-2049",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group-rule/sgr-07a46c647cd2f8997",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-07a46c647cd2f8997",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a3e806ad2b5fa58f",
            "region": "us-east-1",
            "security_group_id": "sg-0cd8f5ee6aeeb082f",
            "security_group_rule_id": "sgr-07a46c647cd2f8997",
            "tags": null,
            "tags_all": {},
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sgr-07a46c647cd2f8997",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.backend-sg-param",
            "aws_security_group.efs-sg-param",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "frontend-sg-ingress-param-3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group-rule/sgr-0fbe5e133a31fe812",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0fbe5e133a31fe812",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-018582f2b2ee41033",
            "security_group_rule_id": "sgr-0fbe5e133a31fe812",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sgr-0fbe5e133a31fe812",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.frontend-sg-param",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "frontend-sg-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111314928072:security-group-rule/sgr-01517a2c1fe530d3d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01517a2c1fe530d3d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-018582f2b2ee41033",
            "security_group_rule_id": "sgr-01517a2c1fe530d3d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111314928072",
            "id": "sgr-01517a2c1fe530d3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.frontend-sg-param",
            "aws_vpc.vpc_param"
          ]
        }
      ]
    }
  ]
}